[ADDED][FIXED] Approved Project Idea and Project Idea