@@ -1,10 +1,12 @@
 package com._p1m.portfolio.features.approvedProjectIdeas.service.serviceImpl;
 
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import com._p1m.portfolio.config.response.dto.PaginationMeta;
 import com._p1m.portfolio.data.enums.ProjectIdeaStatus;
+import com._p1m.portfolio.data.models.lookup.ProjectType;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
@@ -34,7 +36,10 @@ public class ApprovedIdeaServiceImpl implements ApprovedIdeaService {
 
     @Override
     @Transactional(readOnly = true)
-    public PaginatedApiResponse<ApprovedIdeaResponse> listApprovedIdeas(String sortBy, Pageable pageable) {
+    public PaginatedApiResponse<ApprovedIdeaResponse> listApprovedIdeas(String sortBy, Pageable pageable ,String token) {
+        String email = jwtUtil.extractEmail(token);
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new EntityNotFoundException("User not found from token"));
 
         Page<ProjectIdea> ideaPage;
 
@@ -44,9 +49,31 @@ public class ApprovedIdeaServiceImpl implements ApprovedIdeaService {
             ideaPage = projectIdeaRepository.findByApproveStatus(true, pageable);
         }
 
+        Set<Long> reactedProjectIds = user.getReactedProjectIdeas()
+                .stream()
+                .map(ProjectIdea::getId)
+                .collect(Collectors.toSet());
+
         List<ApprovedIdeaResponse> responses = ideaPage.getContent().stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .map(idea -> ApprovedIdeaResponse.builder()
+                        .id(idea.getId())
+                        .name(idea.getName())
+                        .description(idea.getDescription())
+                        .dev_id(idea.getDevProfile() != null ? idea.getDevProfile().getId() : null)
+                        .devName(idea.getDevProfile() != null ? idea.getDevProfile().getName() : "Anonymous")
+                        .profilePictureUrl(idea.getDevProfile() != null ? idea.getDevProfile().getProfilePictureUrl() : null)
+                        .status(idea.getStatus())
+                        .reactionCount(idea.getReactedUsers() != null ? idea.getReactedUsers().size() : 0)
+                        .projectTypes(idea.getProjectTypes().stream()
+                                .map(ProjectType::getName)
+                                .toList())
+                        .reactedProjects(
+                                user.getReactedProjectIdeas().stream()
+                                        .map(ProjectIdea::getId)
+                                        .toList()
+                        )
+                        .build())
+                .toList();
 
         PaginationMeta meta = new PaginationMeta();
         meta.setTotalItems(ideaPage.getTotalElements());
@@ -62,10 +89,6 @@ public class ApprovedIdeaServiceImpl implements ApprovedIdeaService {
                 .build();
     }
 
-    private PaginatedApiResponse<ApprovedIdeaResponse> findPopularApprovedIdeas(Pageable pageable) {
-        return listApprovedIdeas(null, pageable);
-    }
-
     @Override
     @Transactional
     public ApiResponse updateApprovedIdea(Long ideaId, UpdateApprovedIdeaRequest request, String token) {
@@ -79,7 +102,17 @@ public class ApprovedIdeaServiceImpl implements ApprovedIdeaService {
         if (request.description() != null) {
             approvedIdea.setDescription(request.description());
         }
-
+        if (request.status() != null) {
+            ProjectIdeaStatus newStatus = switch (request.status().intValue()) {
+                case 0 -> ProjectIdeaStatus.REJECTED;
+                case 1 -> ProjectIdeaStatus.APPROVED;
+                case 2 -> ProjectIdeaStatus.IN_PROGRESS;
+                case 3 -> ProjectIdeaStatus.COMPLETED;
+                case 4 -> ProjectIdeaStatus.DELETED;
+                default -> throw new IllegalArgumentException("Invalid status code: " + request.status());
+            };
+            approvedIdea.setStatus(newStatus);
+        }
         projectIdeaRepository.save(approvedIdea);
 
         return ApiResponse.builder()
@@ -102,19 +135,20 @@ public class ApprovedIdeaServiceImpl implements ApprovedIdeaService {
                 .build();
     }
 
-    private ApprovedIdeaResponse mapToResponse(ProjectIdea idea) {
-        return new ApprovedIdeaResponse(
-                idea.getId(),
-                idea.getName(),
-                idea.getDescription(),
-                idea.getDevProfile() != null ? idea.getDevProfile().getName() : "Anonymous",
-                idea.getReactedUsers().size(),
-                idea.getStatus().toString(),
-                idea.getProjectTypes().stream()
-                        .map(pt -> pt.getName())
-                        .collect(Collectors.toList())
-        );
-    }
+//    private ApprovedIdeaResponse mapToResponse(ProjectIdea idea) {
+//        return new ApprovedIdeaResponse(
+//                idea.getId(),
+//                idea.getName(),
+//                idea.getDescription(),
+//                idea.getDevProfile() != null ? idea.getDevProfile().getName() : "Anonymous",
+//                idea.getReactedUsers().size(),
+//                idea.getStatus().toString(),
+//                idea.getDevProfile().getProfilePictureUrl(),
+//                idea.getProjectTypes().stream()
+//                        .map(pt -> pt.getName())
+//                        .collect(Collectors.toList())
+//        );
+//    }
 
     private void checkAdminRole(String token) {
         String email = jwtUtil.extractEmail(token);
